Fix alignment of room option buttons

--- a/client/styles/room/requests.module.scss
+++ b/client/styles/room/requests.module.scss
@@ -7,7 +7,6 @@
     @include flex-center-row;
     svg {
         font-size:1.2rem;
-        margin-left:1rem;
         cursor:pointer;
         transform:translateY(3px);
         &:hover {
