--- a/client/styles/room/themepicker.module.scss
+++ b/client/styles/room/themepicker.module.scss
@@ -8,7 +8,6 @@
     @include theme-scrollbar;
     svg {
         font-size:1.2rem;
-        margin-left:1rem;
         cursor:pointer;
         color:var(--primary-color);
         transform:translateY(3px);
