--- a/client/styles/room/visibilitycontrol.module.scss
+++ b/client/styles/room/visibilitycontrol.module.scss
@@ -3,13 +3,13 @@
 .visibilityControl {
 
     height:2rem;
+    width:2rem;
     @include flex-center-row;
 
     cursor:pointer;
     font-size:1.3rem;
 
     transform:scale(1.1);
-    margin-left:0.9rem;
     &:hover {
         filter:brightness(1.5);
     }
